made some buttons

--- a/index.html
+++ b/index.html
@@ -8,5 +8,49 @@
 </head>
 <body>
     <h1>On a new branch</h1>
+    <main>
+        <div>
+            <label>
+                default input:    
+                <input>
+            </label>
+        </div>
+        <div>
+            <label>
+                type text:
+                <input type="text" placeholder="Please fill this box">
+            </label>
+        </div>
+        <div>
+            <label>
+                type number:
+                <input type="number">
+            </label>
+        </div>
+        <div>
+            <label>
+                type checkbox:
+                <input checked type="checkbox">
+            </label>
+        </div>
+        <div>
+            <label>
+                type radio:
+                even: <input name="num" checked type="radio">
+            </label>
+            <label>
+                odd: <input name="num" type="radio">
+            </label>
+        </div>
+        <div>
+            <label>
+                type textarea:
+                <textarea>here is some text</textarea>
+            </label>
+        </div>
+        <div>
+            <button>Click Me!</button>
+        </div>
+    </main>
 </body>
 </html>
